<resources>
    <string name="app_name">RFCAR App</string>
    <string name="send">SEND</string>
    <string name="login">Login</string>
    <string name="Myself">Me</string>
    <string name="none_paired">No Devices</string>
    <string name="none_found">No Devices Found</string>
    <string name="title_activity_drawer_">Drawer_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="bt_chat">BT Chat</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="make_discoverable">Make Discoverable</string>
    <string name="connect">Connect</string>
    <string name="scan_devices2">Scan devices</string>
    <string name="list_devices">List Devices</string>
    <string name="conection_setup">Conection Setup</string>
    <string name="start_listening">Start Listening</string>
    <string name="enter">Enter</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="connection">Connection</string>
    <string name="wifi_discover">Wifi Discover</string>
    <string name="bluetooth_discover">Bluetooth Discover</string>
    <string name="enable_wifi">Enable Wifi</string>
    <string name="bluetooth_connection">Bluetooth Connection</string>
    <string name="wifi_devices">Wifi Devices</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disc_start">WiFi Discovery Started</string>
    <string name="disc_fail">WiFi Discovery Failed</string>
    <string name="idle">Idle</string>
    <string name="connected">\"Connected to \"</string>
    <string name="not_connected">Not Connected</string>
    <string name="host">Host</string>
    <string name="client">Client</string>
    <string name="dev_disc">Device Disconnected</string>
    <string name="connection_fail">Connection Failed</string>
</resources>
