<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/wifi_enable"
            android:icon="@drawable/ic_wifi_black_24dp"
            android:title="@string/enable_wifi" />
        <item
            android:id="@+id/wifi_discover"
            android:icon="@drawable/ic_rss_feed_black_24dp"
            android:title="@string/wifi_discover" />
    </group>

    <item android:title="@string/bluetooth_connection">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_bluetooth_black_24dp"
                android:title="@string/bluetooth_discover" />
            <item
                android:id="@+id/nav_scan"
                android:icon="@drawable/ic_bluetooth_connected_black_24dp"
                android:title="@string/conection_setup" />
        </menu>

    </item>

</menu>